<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Main Display for Current Computation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#EBEAEA"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:gravity="center_vertical|end"
            android:padding="16dp"
            android:text="@string/display_hint"
            android:textColor="@android:color/black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:padding="8dp"
            android:text="0"
            android:textColor="@android:color/darker_gray"
            android:textSize="48sp" />

    </LinearLayout>

    <!-- Calculator Buttons -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#494646">

        <TableRow>

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_add"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_subtract"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_multiply"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_divide"
                android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_9"
                android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_6"
                android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_3"
                android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_decimal"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#FFC107"
                android:text="@string/button_0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_equals"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>
